# enterprise-rshiny-ml-product-delivery-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .lintr  DESCRIPTION  Makefile  README.md  docker-compose.postgresql.yml  docker-compose.review.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
config/: champion_challenger.yaml  data_contracts.yaml  database.yaml  deployment.yaml  drift_thresholds.yaml  features.yaml  model_governance.yaml  model_lifecycle.yaml  model_registry.yaml  model_thresholds.yaml  model_training.yaml  monitoring.yaml  release.yaml  retraining.yaml  rshiny.yaml  serving.yaml  settings.yaml  synthetic_data.yaml
docs/: api_contract.md  api_security.md  architecture.md  architecture_overview.md  calibration_monitoring.md  calibration_strategy.md  champion_challenger.md  ci_activation_runbook.md  ci_cd_strategy.md  cicd_architecture.md  container_architecture.md  data_architecture.md  data_dictionary.md  data_lineage.md  data_quality_monitoring.md  data_quality_treatment.md  database_architecture.md  dataset_splitting.md  denodo_integration.md  dependency_assurance.md  end_to_end_data_flow.md  end_to_end_delivery_flow.md  end_to_end_governance_flow.md  end_to_end_lineage.md  end_to_end_model_flow.md  end_to_end_serving_flow.md  entity_linking.md  fairness_assessment.md  feature_drift.md  feature_engineering.md  feature_registry.md  first_commit_runbook.md  github_actions.md  governed_logical_layer.md  interview_architecture.md  interview_demo_guide.md  interview_evidence_index.md  (+63 more)
(+678 files in other folders)
