[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rshiny-ml-product-delivery-platform"
version = "0.1.0"
description = "Milestone-based foundation for a synthetic R-Shiny and Python machine learning product delivery platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "duckdb>=1.1,<2",
  "pandas>=2.2,<3",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pyarrow>=16,<23",
  "PyYAML>=6.0.2,<7",
  "joblib>=1.4,<2",
  "scikit-learn>=1.5,<2",
  "typer>=0.12,<1",
  "xgboost>=2.1,<4",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "httpx>=0.27,<1",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
ml-product = "ml_product.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ml_product"]

[[tool.mypy.overrides]]
module = ["joblib", "sklearn", "sklearn.*", "xgboost", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ml_product --cov-report=term-missing"
